--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Ratatouille</string>
+    <string name="finding_remy">Finding Remy</string>
+
 </resources>
