--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="password">Password:</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="not_found">NOT FOUND</string>
 </resources>
