--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -2,9 +2,14 @@
     <string name="app_name">Ratatouille</string>
     <string name="finding_remy">Finding Remy</string>
 
-    <string name="username">Username:</string>
-    <string name="password">Password:</string>
+    <string name="username">Username/Email</string>
+    <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="confirm_password">Confirm Password</string>
+
+    <string name="radio_admin">Admin</string>
+    <string name="radio_user">User</string>
+
     <string name="not_found">.NOT FOUND.</string>
 </resources>
