--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="radio_user">User</string>
 
     <string name="not_found">.NOT FOUND.</string>
+    <string name="title_activity_add_rat">AddRatActivity</string>
 </resources>
