--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -13,4 +13,17 @@
     <string name="radio_user">User</string>
 
     <string name="not_found">.NOT FOUND.</string>
+    <string name="unique_key">unique_key</string>
+    <string name="city">City</string>
+    <string name="borough">Borough</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
+    <string name="DateCreated">DateCreated</string>
+    <string name="LocationType">LocationType</string>
+    <string name="IncidentZip">IncidentZip</string>
+    <string name="IncidentAddress">IncidentAddress</string>
+    <string name="Longitude">Longitude</string>
+    <string name="Latitude">Latitude</string>
+    <string name="Borough">Borough</string>
+    <string name="City">City</string>
 </resources>
