--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="Latitude">Latitude</string>
     <string name="Borough">Borough</string>
     <string name="City">City</string>
+    <string name="cancel">cancel</string>
+    <string name="submit">submit</string>
 </resources>
