--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="City">City</string>
     <string name="cancel">cancel</string>
     <string name="submit">submit</string>
+    <string name="Add_Rat">add_rat</string>
 </resources>
