final xml for date buttons on activity_rat_list.xml

--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -35,4 +35,6 @@
     <string name="Submit">Submit</string>
     <string name="EndDate">EndDate</string>
     <string name="StartDate">StartDate</string>
+    <string name="YYYYMMDD">YYYYMMDD</string>
+    <string name="YYYY_MM_DD">YYYY_MM_DD</string>
 </resources>
