--- a/Ratatouille_Project/app/src/main/res/values/strings.xml
+++ b/Ratatouille_Project/app/src/main/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="Latitude">Latitude</string>
     <string name="Borough">Borough</string>
     <string name="City">City</string>
+
     <string name="cancel">cancel</string>
     <string name="submit">submit</string>
     <string name="Add_Rat">add_rat</string>
@@ -37,4 +38,6 @@
     <string name="StartDate">StartDate</string>
     <string name="YYYYMMDD">YYYYMMDD</string>
     <string name="YYYY_MM_DD">YYYY_MM_DD</string>
+
+    <string name="filter">Filter</string>
 </resources>
